Moves from scroll position based navbar collapse to a fixed size depending on the page

--- a/less/header.less
+++ b/less/header.less
@@ -19,10 +19,9 @@ nav { display: none; }
 
 @media only screen and (min-width: 768px) {
   .header-container {
-    border-bottom: 4px solid rgb(41, 169, 225);
-    height: 130px;
-    text-align: left;
-    transition: height 0.2s;
+    border-bottom: 2px solid rgb(41, 169, 225);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
+    height: 60px;
 
     header {
       margin: 0 auto;
@@ -41,14 +40,13 @@ nav { display: none; }
     }
 
     img {
+      bottom: 8px;
       max-height: 75%;
       height: auto;
       //margin: 14px 0 0 8px;
       padding: 0;
       position: absolute;
-      bottom: 18px;
       left: 8px;
-      transition: height 0.2s, width 0.2s, bottom 0.2s;
     }
 
     nav {
@@ -80,17 +78,13 @@ nav { display: none; }
     }
   }
 
-  .header-container.collapsed {
-    border-bottom-width: 2px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
-    height: 60px;
-    transition: height 1s ease;
+  .front .header-container {
+    border-bottom-width: 4px;
+    height: 130px;
 
     img {
-      bottom: 8px;
-      transition: height 0.75s ease,
-                  width 0.75s ease,
-                  bottom 0.75s ease;
+      bottom: 18px;
     }
+
   }
 }
